Bug 396652, gecko scrolls on activate event (mouse click) with gtk embeds, r+sr+a=roc, p=iainnicol-mozbugs2007@yahoo.co.uk+me